--- a/pages/iconsAndGraphics.html
+++ b/pages/iconsAndGraphics.html
@@ -81,22 +81,25 @@
                 <div class="interface_icons_container">
                     <h1 class="igi_h1">Interface Icons</h1>
                     <div class="ui_icons_wrapper">
-                        <img  src="/public/icons/home.svg" alt="">
-                        <img  src="/public/icons/quizPage.svg" alt="">
-                        <img  src="/public/icons/aboutUs.svg" alt="">
-                        <img  src="/public/icons/backArrow.svg" alt="">
+                        <img src="/public/icons/home.svg" alt="">
+                        <img src="/public/icons/quizPage.svg" alt="">
+                        <img src="/public/icons/aboutUs.svg" alt="">
+                        <img src="/public/icons/backArrow.svg" alt="">
                         <img src="/public/icons/info.svg" alt="">
-                        <img  src="/public/icons/takeQuiz.svg" alt="">
-                        <img  src="/public/icons/history.svg" alt="">
+                        <img src="/public/icons/takeQuiz.svg" alt="">
+                        <img src="/public/icons/history.svg" alt="">
                     </div>
                 </div>
                 <div class="text_container">
-                    <p class="igi_p_text">At Seed Sprout, we use a blend of graphics and images to create an accurent and stylish aesthetic.
-                        We use imagery when we show users what result they get when they take the quiz, in order to give an accurate representation
+                    <p class="igi_p_text">At Seed Sprout, we use a blend of graphics and images to create an accurent
+                        and stylish aesthetic.
+                        We use imagery when we show users what result they get when they take the quiz, in order to give
+                        an accurate representation
                         of what the actual fruit or vegetable might look like.
                         <br>
-                        The interface icons will be used in the navigation bar along with text for easy recogniction and scanability.
-                </p>
+                        The interface icons will be used in the navigation bar along with text for easy recogniction and
+                        scanability.
+                    </p>
                 </div>
             </div>
 
