--- a/pages/index.html
+++ b/pages/index.html
@@ -44,7 +44,7 @@
                 <div class="text_content">
                     <h1 class="home_content_headerOne">A Complete Web <br>Styleguide</h1>
                     <h4 class="home_content_headerFour">An overview of how Seed Sprout's <br> brand came to be.</h4>
-                    <p class="home_content_p">By Jenny, Madhu, and Neema</p>
+                    <p class="home_content_p">Seed Sprout - By Jenny, Madhu, and Neema</p>
                 </div>
             </div>
             <div class="body_content_logo_container">
